--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head><title>Test</title></head>
-<body><h1>This is a test</h1></body>
+<head>
+  <meta http-equiv="refresh" content="0; url=./forest/output/index.xml">
+  <script type="text/javascript">
+    // 备用脚本跳转
+    window.location.href = "./forest/output/index.xml"
+  </script>
+  <title>Redirecting...</title>
+</head>
+<body>
+  正在进入数字花园... 如果没有自动跳转，请点击 <a href="./forest/output/index.xml">此处</a>。
+</body>
 </html>
